Fix discrepancy between documentation and rsp type
